--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NewPdfActivity"></activity>
         <activity android:name=".PDFactivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
